refactor: rubriqueDTO -> record